--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.AddBidActivity"></activity>
+        <activity android:name=".Activity.NotificationActivity"></activity>
+        <activity android:name=".Activity.HireActivity" />
+        <activity android:name=".Activity.AddBidActivity" />
         <activity android:name=".Activity.SingleJobActivity" />
         <activity android:name=".Activity.UserOptionActivity" />
         <activity android:name=".Activity.ImagesliderActivity" />
